--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         </div>
                         <div class="navbar-nav ml-auto py-0">
                             <a href="" class="nav-item nav-link">Login</a>
-                            <a href="" class="nav-item nav-link">Register</a>
+                            <a href="Register.html" class="nav-item nav-link">Register</a>
                         </div>
                     </div>
                 </nav>
