--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -145,7 +146,7 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="login.html" class="nav-item nav-link">Login</a>
+                            <a href="login.html" class="nav-item nav-link" data-toggle="model" data-target="#loginModal">Login</a>
                             <a href="" class="nav-item nav-link">Register</a>
                         </div>
                     </div>
@@ -188,6 +189,7 @@
         </div>
     </div>
     <!-- Navbar End -->
+     
 
 
     <!-- Featured Start -->
