--- a/login.html
+++ b/login.html
@@ -1,165 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flipkart Login UI</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f1f3f6;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        body {
-            background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+    .container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        .login-container {
-            width: 350px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+    .modal {
+      display: flex;
+      width: 80%;
+      max-width: 600px;
+      height: 400px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+      overflow: hidden;
+      background-color: white;
+    }
 
-        .login-logo img {
-            width: 100px;
-            margin-bottom: 20px;
-        }
+    .modal-left {
+      background-color: #ffc107;
+      padding: 30px;
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: white;
+    }
 
-        .login-container h2 {
-            margin-bottom: 20px;
-            font-size: 22px;
-        }
+    .modal-left h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
 
-        .login-container form input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
+    .modal-left p {
+      font-size: 14px;
+    }
 
-        .login-container form button {
-            width: 100%;
-            padding: 12px;
-            background-color: #f0c14b;
-            border: 1px solid #a88734;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
+    .modal-right {
+      width: 60%;
+      padding: 30px;
+    }
 
-        .login-container form button:hover {
-            background-color: #e6b838;
-        }
+    .modal-right form {
+      display: flex;
+      flex-direction: column;
+    }
 
-        .login-container .new-account {
-            margin-top: 20px;
-            font-size: 14px;
-        }
+    .form-group {
+      margin-bottom: 20px;
+    }
 
-        .new-account a {
-            text-decoration: none;
-            color: #0066c0;
-        }
+    .form-group label {
+      font-size: 14px;
+      margin-bottom: 5px;
+      display: block;
+    }
 
-        .new-account a:hover {
-            text-decoration: underline;
-        }
+    .form-group input {
+      width: 100%;
+      padding: 10px;
+      border-radius: 3px;
+      border: 1px solid #ddd;
+      font-size: 14px;
+    }
 
-        .divider {
-            margin: 20px 0;
-            position: relative;
-            text-align: center;
-        }
+    .form-group button {
+      background-color: #ffc107;
+      color: white;
+      border: none;
+      padding: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 3px;
+    }
 
-        .divider::before, .divider::after {
-            content: "";
-            position: absolute;
-            width: 45%;
-            height: 1px;
-            background-color: #ddd;
-            top: 50%;
-        }
+    .form-group button:hover {
+      background-color: #ffc107;
+    }
 
-        .divider::before {
-            left: 0;
-        }
+    .text-link {
+      font-size: 14px;
+      color: #ffc107;
+      cursor: pointer;
+      text-decoration: none;
+    }
 
-        .divider::after {
-            right: 0;
-        }
+    .text-link:hover {
+      text-decoration: underline;
+    }
 
-        .divider span {
-            background-color: white;
-            padding: 0 10px;
-            color: #888;
-        }
+    .text-small {
+      font-size: 12px;
+      margin-bottom: 20px;
+      color: #878787;
+    }
 
-        .footer {
-            margin-top: 20px;
-            text-align: center;
-            font-size: 12px;
-            color: #888;
-        }
+    .switch-link {
+      text-align: center;
+      margin-top: 10px;
+    }
 
-        .footer a {
-            color: #0066c0;
-            text-decoration: none;
-        }
+    .switch-link a {
+      color: #ffc107;
+      text-decoration: none;
+      cursor: pointer;
+    }
 
-        .footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    .switch-link a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
-    <div class="login-container">
-        
+  <div class="container">
+    <div class="modal">
+      <!-- Left Section -->
+      <div class="modal-left" id="modal-left-content">
+        <center><h1>Login</h1></center>
+        <!-- <p>Get access to your Orders, Wishlist and Recommendations</p> -->
+      </div>
 
-        <h2>Sign-In</h2>
-        <form id="loginForm">
-            <input type="email" id="email" placeholder="Enter your email" required>
-            <input type="password" id="password" placeholder="Enter your password" required>
+      <!-- Right Section -->
+      <div class="modal-right">
+        <!-- Login Form -->
+        <form id="login-form">
+          <div class="form-group">
+            <label for="email">Enter Email/Mobile number</label>
+            <input type="text" id="email" placeholder="Enter your email or phone">
+          </div>
+          <div class="form-group">
+            <label for="password">Enter Password</label>
+            <input type="password" id="password" placeholder="Enter your password">
+          </div>
+          <div class="form-group">
             <button type="submit">Login</button>
+          </div>
+          <p class="text-small">By continuing, you agree to Shanthi Tex <a href="#" class="text-link">Terms of Use</a> and <a href="#" class="text-link">Privacy Policy</a>.</p>
+          <div class="switch-link">
+            New to Shanthi Tex? <a onclick="showSignUp()">Create an account</a>
+          </div>
+          </div>
         </form>
 
-        
-
-        <div class="new-account">
-            <a href="#">Create your Amazon account</a>
-        </div>
-
-        <div class="footer">
-            <p><a href="#">Conditions of Use</a> | <a href="#">Privacy Notice</a> | <a href="#">Help</a></p>
-        </div>
+        <!-- Sign Up Form (Hidden by default) -->
+        <form id="signup-form" style="display: none;">
+          <div class="form-group">
+            <label for="new-email">Enter Email/Mobile number</label>
+            <input type="text" id="new-email" placeholder="Enter your email or phone">
+          </div>
+          <div class="form-group">
+            <label for="new-password">Create Password</label>
+            <input type="password" id="new-password" placeholder="Create a password">
+          </div>
+          <div class="form-group">
+            <button type="submit">Sign Up</button>
+          </div>
+          <p class="text-small">By continuing, you agree to Shanthi Tex <a href="#" class="text-link">Terms of Use</a> and <a href="#" class="text-link">Privacy Policy</a>.</p>
+          <div class="switch-link">
+            Existing User? <a onclick="showLogin()">Login</a>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+  <script>
+    function showSignUp() {
+      document.getElementById('login-form').style.display = 'none';
+      document.getElementById('signup-form').style.display = 'block';
+      document.getElementById('modal-left-content').innerHTML = `
+        <h1>Looks like you're new here!</h1>
+        <p>Sign up to get started</p>
+      `;
+    }
 
-            if (email === 'user@example.com' && password === 'password123') {
-                alert('Login Successful!');
-            } else {
-                alert('Invalid email or password!');
-            }
-        });
-    </script>
-
+    function showLogin() {
+      document.getElementById('signup-form').style.display = 'none';
+      document.getElementById('login-form').style.display = 'block';
+      document.getElementById('modal-left-content').innerHTML = `
+        <h1>Login</h1>
+        <p>Get access to your Orders, Wishlist and Recommendations</p>
+      `;
+    }
+  </script>
 </body>
 </html>
