--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="login.html" class="nav-item nav-link" data-toggle="model" data-target="#loginModal">Login</a>
+                            <a href="" class="nav-item nav-link">Login</a>
                             <a href="" class="nav-item nav-link">Register</a>
                         </div>
                     </div>
